# doh-server

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  localhost.p12
.github/workflows/: issues.yml  release.yml  rust.yml  shiftleft-analysis.yml  test.yml
src/: config.rs  constants.rs  dns.rs  errors.rs  main.rs  utils.rs
src/libdoh/: Cargo.toml
src/libdoh/src/: constants.rs  dns.rs  dns_json.rs  dns_parser.rs  doq.rs  edns_ecs.rs  errors.rs  globals.rs  lib.rs  logging.rs  odoh.rs  odoh_proxy.rs  tls.rs
