[package]
name = "doh-proxy"
version = "0.3.7"
authors = ["Frank Denis <github@pureftpd.org>"]
description = "A DNS-over-HTTPS (DoH) proxy"
keywords = ["dns","https","doh","proxy"]
license = "MIT"
homepage = "https://github.com/jedisct1/rust-doh"
repository = "https://github.com/jedisct1/rust-doh"
categories = ["asynchronous", "network-programming","command-line-utilities"]
edition = "2018"
readme = "README.md"

[features]
default = ["tls"]
tls = ["libdoh/tls"]

[dependencies]
libdoh = { path = "src/libdoh", version = "0.3.7", default-features = false }
clap = "2.33.3"
jemallocator = "0.3.2"
tokio = { version = "1.2.0", features = ["net", "rt-multi-thread", "parking_lot", "time", "sync"] }

[package.metadata.deb]
extended-description = """\
A fast and secure DoH (DNS-over-HTTPS) server written in Rust."""
assets = [
  ["target/release/doh-proxy", "usr/bin/", "755"],
  ["README.md", "usr/share/doc/doh-proxy/README.md", "644"]
]
section = "network"
depends = "$auto"
priority = "optional"

[profile.release]
codegen-units = 1
incremental = false
lto = "fat"
opt-level = 3
panic = "abort"
