[package]
name = "libdoh"
version = "0.9.11"
authors = ["Frank Denis <github@pureftpd.org>"]
description = "DoH and Oblivious DoH library for the rust-doh app"
keywords = ["dns", "https", "doh", "odoh", "proxy"]
license = "MIT"
homepage = "https://github.com/jedisct1/rust-doh"
repository = "https://github.com/jedisct1/rust-doh"
categories = ["asynchronous", "network-programming", "command-line-utilities"]
edition = "2018"

[features]
default = ["tls"]
tls = ["tokio-rustls"]

[dependencies]
anyhow = "1.0.86"
arc-swap = "1.7.1"
base64 = "0.22.1"
byteorder = "1.5.0"
bytes = "1.6.0"
futures = "0.3.30"
hyper = { version = "^0.14.29", default-features = false, features = [
    "server",
    "http1",
    "http2",
    "stream",
    "runtime",
] }
odoh-rs = "1.0.3"
rand = "0.8.5"
tokio = { version = "1.38.0", features = [
    "net",
    "rt-multi-thread",
    "time",
    "sync",
] }
tokio-rustls = { version = "^0.24.1", features = [
    "early-data",
], optional = true }
rustls-pemfile = "^1.0.4"

[profile.release]
codegen-units = 1
incremental = false
lto = "fat"
opt-level = 3
panic = "abort"
